GOsa2 changelog
===============

* gosa 2.6.7
  - Added more information to DHCP service dialog (thanks to Mathieu)
  - Fixed generation of kerberos host keys when DNS is enabled
  - Added more checks for DNS zone records
  - Fixed template error message when no sshkey plugin is enabled
  - Speed up group and user removal by large factors
  - Fix Problem where arrays got shortened by one in copy and paste
  - Unified complete logging with rSyslog plugin and service

* gosa 2.6.6
  - Added ssh public key management
  - Added LVM support to FAI modules using setup-storage
  - Added DHCP/DNS options to the OPSI hosts
  - Added GOsa login restrictions
  - Added "Domain" to department management
  - Added organizational roles management
  - Added option to configure user DNs
  - Added OPSI license management
  - Added possibility to add FAI packages without the SI service (thanks to GLG)
  - Added IMAP timeout option
  - Added pool method for uidNumber/gidNumber using sambaUnixIdPool
  - Added workaround for non closable message dialogues in Konqueror 3.x
  - Updated locales
  - Updated gosa.conf manual page
  - Updated DNS settings dialoges
  - Moved to unified datepicker for all dates
  - Fixed display of opsi hosts in the system list
  - Fixed usage of the sambe "base" for every list page
  - Fixed automatic base settings for new systems based on the ogroup base
  - Fixed setup issues with LDAP inspection
  - Fixed setup issues with sub dialogues
  - Fixed next group ID generation
  - Fixed "suggest IP" function to return unique IP
  - Fixed multiple password decryption
  - Fixed issues with empty ACL definitions
  - Fixed lost attributes when using copy and paste with objectgroups
  - Enhanced addressbook plugin ACL
  - Removed outdated samba 2 mode
  - Various minor bugfixes

* gosa 2.6.5
  - Updated locales
  - Improved PPD handling
  - Added more sanity checks in group management
  - DHCP now allows multiple values for options and statements containing